--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "test",
+    "run-log": "node index.js >run.log 2>&1",
     "run": "node index.js"
   },
   "repository": {
